# speedcrunch-imperial

./: .gitignore  BUILDING-FORK.md  README.md
adm/: set-project-version.sh
doc/: clean-doc-builds.sh  rebuild-manual.sh  (+2 more)
doc/src/extensions/quark-sphinx-theme-0.6.0/: LICENSE  PKG-INFO  README.md  pyproject.toml  setup.py  tox.ini
doc/src/extensions/quark-sphinx-theme-0.6.0/quark_sphinx_theme/: __init__.py  _lovelace.py
doc/src/extensions/quark-sphinx-theme-0.6.0/quark_sphinx_theme/ext/: html_compat.py
doc/src/extensions/quark-sphinx-theme-0.6.0/quark_sphinx_theme/ext/html_rewrite/: __init__.py  boxes.py  compat.py  literal_blocks.py
doc/src/extensions/quark-sphinx-theme-0.6.0/quark_sphinx_theme/quark/: domainindex.html  genindex-single.html  genindex.html  layout.html  theme.conf
doc/src/extensions/quark-sphinx-theme-0.6.0/quark_sphinx_theme/quark/static/: quark.css_t
doc/src/extensions/quark-sphinx-theme-0.6.0/test/: test_core.py  test_html_rewrite.py  test_html_rewrite_features.py  test_import.py  test_theme.py  util.py
doc/src/extensions/quark-sphinx-theme-0.6.0/test/testdoc-extensions/: custom_qthelp.py
doc/src/extensions/quark-sphinx-theme-0.6.0/test/testdoc-html_rewrite/: conf.py  contents.rst  test_admonition.rst  test_citation.rst  test_footnote.rst  test_literal_block.rst  test_pre_block.rst  test_sidebar.rst  test_topic.rst  test_warning.rst
doc/src/extensions/quark-sphinx-theme-0.6.0/test/testdoc-theme/: conf.py  contents.rst
doc/src/extensions/quark-sphinx-theme-0.6.0/test/testdoc-theme-entrypoint/: conf.py  contents.rst
src/: main.cpp  (+5 more)
(+434 files in other folders)
