[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "quark_sphinx_theme"
dist-name = "quark-sphinx-theme"
author = "Felix Krull"
author-email = "f_krull@gmx.de"
home-page = "https://gitlab.com/fkrull/quark-sphinx-theme"
description-file = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]

requires-python = ">= 3.5"
requires = [
    "sphinx >= 1.8",
]

[tool.flit.metadata.requires-extra]
test = [
    "html5lib",
    "tinycss"
]

[tool.flit.entrypoints."sphinx.html_themes"]
quark = "quark_sphinx_theme"

[tool.flit.sdist]
exclude = [
    ".gitignore",
    ".gitlab-ci.yml",
    ".ci",
    "doc",
    "tools"
]
